media/css/layout.css
/* ... */
input[type=submit].submit {
    min-width: 160px;
    margin: 10px 0 0 0;
    float: right;
}

input[type=submit][disabled=disabled].submit {
    opacity: .5;
}

.profile_area {
    font-size: 14px;
    float: right;
}

.profile_area a {
    display: block;
    border-radius: 5px;
    background-color: #eae6cc;
    padding: 5px 10px 5px 10px;
    float: left;
    margin: 10px 0px 0px 10px;
}

.profile_area a:hover {
    background-color: #f7d453;
    box-shadow: #e9892c 0px -5px;
    color: #2b3543;
}

.edit_mode {
    border-radius: 5px;
    background-color: #91af62;
    text-align: center;
    letter-spacing: 20px;
}

.edit_mode div {
    padding: 10px;
    font-size: 18px;
    font-weight: bold;
}

.manage_buttons {
    float: right;
}

.manage_buttons form {
    float: left;
}

.manage_buttons a,
.manage_buttons input[type=submit],
input[type=button].small_button {
    display: block;
    border-radius: 5px;
    border: none;
    font-size: 14px;
    font-weight: bold;
    background-color: #91af62;
    padding: 5px 10px 5px 10px;
    float: left;
    margin: 0px 0px 0px 10px;
    color: #eae6cc;
    cursor: pointer;
}

.manage_buttons a.red,
.manage_buttons input[type=submit].red,
input[type=button].small_button.red {
    color: #eae6cc;
    background-color: #e44b49;
}

.manage_buttons a:hover,
.manage_buttons input[type=submit]:hover,
input[type=button].small_button:hover {
    color: #2b3543;
}

input[type=button].small_button {
    display: inline;
    float: none;
}

.margin10 {
    margin: 10px;
}

#draft_view {

}

h1.draft_head {
    background-color: #e9892c;
    padding: 10px;
    border-radius: 5px;
    color: #eae6cc;
}

h1.draft_head ul {
    margin: 10px 0px 0px 0px;
    padding: 0px;
}

h1.draft_head li {
    font-size: 14px;
    padding: 0px;
    list-style: none;
    margin: 0px;
    font-weight: normal;
}

h1.draft_head label {
    font-weight: bold;
}

#header {
    height: 190px;
}

#background-top {
    position: absolute;
    top: 0px;
    left: 0px;
    z-index: -3;
    width: 100%;
    height: 170px;
    background-color: #eae6cc;
    background-image: url(/media/img/content_bg.png);
}

#yellow_submarine_bar {
    position: absolute;
    top: 165px;
    left: 0px;
    z-index: -1;
    background-image: url(/media/img/yellow_submarine_bar.png);
    background-repeat: repeat-x;
    height: 80px;
    width: 100%;
}

#logo {
    width: 400px;
    cursor: pointer;
}

#logo,
#logo .beatles_cover,
#logo .shadow_big,
#logo .shadow_small,
div.yellow_submarine_title,
div.yellow_submarine_title .shadow_big,
div.yellow_submarine_title .shadow_small {
    height: 60px;
    font-family: yellow_submarine;
    font-size: 50px;
    color: #f7d453;

    text-shadow: 1px 1px 0 #000,
    -1px 1px 0 #000,
    1px -1px 0 #000,
    -1px -1px 0 #000,
    0px 1px 0 #000,
    0px -1px 0 #000,
    -1px 0px 0 #000,
    1px 0px 0 #000,
    1px 1px 0 #000,
    -1px 1px 0 #000,
    1px -1px 0 #000,
    -1px -1px 0 #000,
    0px 1px 0 #000,
    0px -1px 0 #000,
    -2px 0px 0 #000,
    1px 0px 0 #000,
    1px 1px 0 #000,
    -1px 1px 0 #000,
    1px -1px 0 #000,
    -1px -1px 0 #000,
    1px 1px 0 #000,
    -1px 1px 0 #000,
    1px -1px 0 #000,
    -1px -1px 0 #000;
    position: relative;
    z-index: 2;
}

div.yellow_submarine_title {
    margin-left: 5px;
}

div.yellow_submarine_title,
div.yellow_submarine_title .shadow_big,
div.yellow_submarine_title .shadow_small {
    font-size: 40px;
}

#logo .beatles_cover {
    font-size: 30px;
    margin-left: 10px;
    text-shadow-color: #e9892c;
}

#logo .alternate {

    text-shadow: 1px 1px 0 #e9892c,
    -1px 1px 0 #e9892c,
    1px -1px 0 #e9892c,
    -1px -1px 0 #e9892c,
    0px 1px 0 #e9892c,
    0px -1px 0 #e9892c,
    -1px 0px 0 #e9892c,
    1px 0px 0 #e9892c,
    1px 1px 0 #e9892c,
    -1px 1px 0 #e9892c,
    1px -1px 0 #e9892c,
    -1px -1px 0 #e9892c,
    0px 1px 0 #e9892c,
    0px -1px 0 #e9892c,
    -2px 0px 0 #e9892c,
    1px 0px 0 #e9892c,
    1px 1px 0 #e9892c,
    -1px 1px 0 #e9892c,
    1px -1px 0 #e9892c,
    -1px -1px 0 #e9892c,
    1px 1px 0 #e9892c,
    -1px 1px 0 #e9892c,
    1px -1px 0 #e9892c,
    -1px -1px 0 #e9892c;
    letter-spacing: 5px;
}

#logo .shadow,
div.yellow_submarine_title .shadow {
    z-index: -1;
    top: -5px;
    position: absolute;
    color: #e9892c !important;
}

#logo .shadow_big,
div.yellow_submarine_title .shadow_big {
    color: #e9892c !important;
}

#logo .shadow_small,
div.yellow_submarine_title .shadow_small {
    top: 2px;
    color: #e9892c !important;
}

#logo_big {
    width: 100%;
}

#logo_big,
#logo_big div {
    font-size: 140px !important;
    margin: 0px !important;
    padding: 0px !important;
}

#logo_big .beatles_cover {
    font-size: 80px !important;
    margin: 0px !important;
    padding: 0px !important;
}

#logo_big #logo {
    width: 900px;
    text-align: center;
    margin: 10px auto 0 auto;
}


#profile label {
    width: 200px;
}

#profile input[type=text],
#profile input[type=password] {
    width: 360px;
}

#menu {
    color: #2b3543;
    font-size: 18px;
    font-weight: bold;
    margin-bottom: 10px;
    margin-top: 10px;
}

#menu div.menu_item {
    border-radius: 5px;
    background-color: #eae6cc;
    background-image: url(/media/img/content_bg.png);
    padding: 5px 20px 5px 20px;
    margin-right: 10px;
    float: left;
    cursor: pointer;
}

#menu a {
    color: #2b3543;
    text-decoration: none;

}

#menu div.menu_item:hover,
#menu div.selected {
    background-color: #f7d453;
    box-shadow: #e9892c 0px -5px;
    background-image: none;
}

#content,
#login {
    background-color: #eae6cc;
    background-image: url(/media/img/content_bg.png);
    padding:  10px;
    border-radius: 5px;
    margin-bottom: 10px;
}

#login {
    margin: 50px auto 10px auto;
    width: 300px;

}

#login input {
    width: 180px;
}

#login li {
    margin-left: 0px;
}

#login label {
    width: 50px;
}
/* ... */

